force-app/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <description>This is where all competitive information is stored, including
		links to Knock-Out List Reports</description>
    <label>Competitor</label>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>