force-app/main/default/objects/Competitor__c/fields/Acquisitions__c.field-meta.xml
<CustomField>
    <fullName>Acquisitions__c</fullName>
    <label>Acquisitions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>