force-app/main/default/objects/Competitor__c/fields/Annual_Revenues__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenues__c</fullName>
    <label>Annual Revenues</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>