force-app/main/default/objects/Competitor__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Please comment on strengths, weaknesses that Competition is displaying as well as their positioning and pricing relative to Omnitracs.</inlineHelpText>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>