force-app/main/default/objects/Competitor__c/fields/Company_Profile__c.field-meta.xml
<CustomField>
    <fullName>Company_Profile__c</fullName>
    <label>Company Profile</label>
    <type>Url</type>
</CustomField>