force-app/main/default/objects/Competitor__c/fields/Competes_wtih__c.field-meta.xml
<CustomField>
    <fullName>Competes_wtih__c</fullName>
    <inlineHelpText>Name the UPSLT Products that this vendor competes with</inlineHelpText>
    <label>Competes with?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>TP</fullName>
            </value>
            <value>
                <fullName>MC Server</fullName>
            </value>
            <value>
                <fullName>MC Phone</fullName>
            </value>
            <value>
                <fullName>RNT (Geotab)</fullName>
            </value>
            <value>
                <fullName>FleetLoader</fullName>
            </value>
            <value>
                <fullName>RNA (Plan)</fullName>
            </value>
            <value>
                <fullName>RNA (Dispatch)</fullName>
            </value>
            <value>
                <fullName>OnTrack</fullName>
            </value>
            <value>
                <fullName>MC POD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>