force-app/main/default/objects/Competitor__c/fields/Competitive_takeaway__c.field-meta.xml
<CustomField>
    <fullName>Competitive_takeaway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitive_takeaway</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>