force-app/main/default/objects/Competitor__c/fields/Competitive_Threat_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Threat_At_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitive Threat/At Risk</label>
    <referenceTo>Competitive_Threat__c</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>