force-app/main/default/objects/Competitor__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <inlineHelpText>If you don&apos;t see a competitor listed, please send an email to competitor.list@omnitracs.com for assistance.</inlineHelpText>
    <label>Competitor Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>@Road</fullName>
            </value>
            <value>
                <fullName>123Loadboard</fullName>
            </value>
            <value>
                <fullName>Alda Digital</fullName>
            </value>
            <value>
                <fullName>AlertDriving</fullName>
            </value>
            <value>
                <fullName>AMA</fullName>
            </value>
            <value>
                <fullName>Apacheta</fullName>
            </value>
            <value>
                <fullName>Astrum Satelital (Proeza TI)</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Axon</fullName>
            </value>
            <value>
                <fullName>Axon Development Corporation</fullName>
            </value>
            <value>
                <fullName>Big Roads</fullName>
            </value>
            <value>
                <fullName>Bolt</fullName>
            </value>
            <value>
                <fullName>Cadec</fullName>
            </value>
            <value>
                <fullName>CanHAUL.com</fullName>
            </value>
            <value>
                <fullName>CarrierWeb</fullName>
            </value>
            <value>
                <fullName>Central de Alarmas</fullName>
            </value>
            <value>
                <fullName>CEPA</fullName>
            </value>
            <value>
                <fullName>Control Track</fullName>
            </value>
            <value>
                <fullName>Cooltrax</fullName>
            </value>
            <value>
                <fullName>Copiloto Satelital</fullName>
            </value>
            <value>
                <fullName>Descartes Systems Group, Inc.</fullName>
            </value>
            <value>
                <fullName>Discrete Wireless</fullName>
            </value>
            <value>
                <fullName>Dispatch Track</fullName>
            </value>
            <value>
                <fullName>DriveCam</fullName>
            </value>
            <value>
                <fullName>DriverCare/GE</fullName>
            </value>
            <value>
                <fullName>Driving Dynamics/PHH</fullName>
            </value>
            <value>
                <fullName>DSi Mobile</fullName>
            </value>
            <value>
                <fullName>Elitesat Networks</fullName>
            </value>
            <value>
                <fullName>Encontrack</fullName>
            </value>
            <value>
                <fullName>Express Technologies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>