force-app/main/default/objects/Competitor__c/fields/Competitor_Product_Solution__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product_Solution__c</fullName>
    <label>Competitor Product/Solution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>