force-app/main/default/objects/Competitor__c/fields/Competitor_Status__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Status__c</fullName>
    <label>Competitor Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>