force-app/main/default/objects/Competitor__c/fields/Core_Market_1__c.field-meta.xml
<CustomField>
    <fullName>Core_Market_1__c</fullName>
    <inlineHelpText>Competitors #1 market or target market</inlineHelpText>
    <label>Core Market #1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>