force-app/main/default/objects/Competitor__c/fields/Core_Market_2__c.field-meta.xml
<CustomField>
    <fullName>Core_Market_2__c</fullName>
    <inlineHelpText>Competitors secondary core market or target market</inlineHelpText>
    <label>Core Market #2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>