force-app/main/default/objects/Competitor__c/fields/Cost_compared_to_UPSLT__c.field-meta.xml
<CustomField>
    <fullName>Cost_compared_to_UPSLT__c</fullName>
    <label>Cost (compared to RTI)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Much Higher (&gt;50%)</fullName>
            </value>
            <value>
                <fullName>Higher (25%)</fullName>
            </value>
            <value>
                <fullName>Same</fullName>
            </value>
            <value>
                <fullName>Lower (-25%)</fullName>
            </value>
            <value>
                <fullName>Much Lower (&lt;50%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>