force-app/main/default/objects/Competitor__c/fields/Dom_Sales_Model__c.field-meta.xml
<CustomField>
    <fullName>Dom_Sales_Model__c</fullName>
    <inlineHelpText>How is this competitor selling their product in the US?</inlineHelpText>
    <label>Domestic Sales Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>VAR/Reseller(s)</fullName>
            </value>
            <value>
                <fullName>TeleSales</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Other Channels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>