force-app/main/default/objects/Competitor__c/fields/Enterprise_Version__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this product supported to work in a multi-user environment in multiple locations?</inlineHelpText>
    <label>Enterprise Version?</label>
    <type>Checkbox</type>
</CustomField>