force-app/main/default/objects/Competitor__c/fields/GPS_Dispatch_Cost__c.field-meta.xml
<CustomField>
    <fullName>GPS_Dispatch_Cost__c</fullName>
    <label>GPS/Dispatch Cost</label>
    <length>50</length>
    <type>Text</type>
</CustomField>