force-app/main/default/objects/Competitor__c/fields/GPS_Dispatch_Product__c.field-meta.xml
<CustomField>
    <fullName>GPS_Dispatch_Product__c</fullName>
    <inlineHelpText>Competes with any version of MC</inlineHelpText>
    <label>GPS/Dispatch Product</label>
    <length>25</length>
    <type>Text</type>
</CustomField>