force-app/main/default/objects/Competitor__c/fields/GPS_Dispatch_Strenghts__c.field-meta.xml
<CustomField>
    <fullName>GPS_Dispatch_Strenghts__c</fullName>
    <inlineHelpText>Strenghts over any version of MC - be specific</inlineHelpText>
    <label>GPS/Dispatch (Strenghts)</label>
    <type>TextArea</type>
</CustomField>