force-app/main/default/objects/Competitor__c/fields/GPS_Dispatch_Weakness__c.field-meta.xml
<CustomField>
    <fullName>GPS_Dispatch_Weakness__c</fullName>
    <inlineHelpText>Weakness to any version of MC (or RNA Dispatch) - be specific</inlineHelpText>
    <label>GPS/Dispatch (Weakness)</label>
    <type>TextArea</type>
</CustomField>