force-app/main/default/objects/Competitor__c/fields/Headquarters_City__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_City__c</fullName>
    <inlineHelpText>City Only</inlineHelpText>
    <label>City (HQ)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>