force-app/main/default/objects/Competitor__c/fields/Headquarters_Country__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_Country__c</fullName>
    <label>Country (HQ)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>