force-app/main/default/objects/Competitor__c/fields/Headquarters_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_State_Province__c</fullName>
    <inlineHelpText>Use two character abbreviation when posible</inlineHelpText>
    <label>State/Province (HQ)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>