force-app/main/default/objects/Competitor__c/fields/HQ_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>HQ_Zip_Postal_Code__c</fullName>
    <label>Zip/Postal Code (HQ)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>