force-app/main/default/objects/Competitor__c/fields/Int_l_Sales_Model__c.field-meta.xml
<CustomField>
    <fullName>Int_l_Sales_Model__c</fullName>
    <inlineHelpText>How is this competitor selling its products outside the US
			and Canada?</inlineHelpText>
    <label>Int&apos;l Sales Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>VAR/Reseller(s)</fullName>
            </value>
            <value>
                <fullName>TeleSales</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Other Channels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>