force-app/main/default/objects/Competitor__c/fields/Key_Customer_2__c.field-meta.xml
<CustomField>
    <fullName>Key_Customer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identify the prospect from the Accounts Object who are key
			referrences for his competitor</inlineHelpText>
    <label>Key Customer #2</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Competitors2</relationshipName>
    <type>Lookup</type>
</CustomField>