force-app/main/default/objects/Competitor__c/fields/Key_Customer_3__c.field-meta.xml
<CustomField>
    <fullName>Key_Customer_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identify the prospect from the Accounts Object who are key
			referrences for his competitor</inlineHelpText>
    <label>Key Customer #3</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Competitors3</relationshipName>
    <type>Lookup</type>
</CustomField>