force-app/main/default/objects/Competitor__c/fields/Marketing_Ops__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Ops__c</fullName>
    <description>Used by Marketing Ops to diagnose issues with name and ID changes</description>
    <label>Marketing Ops</label>
    <type>TextArea</type>
</CustomField>