force-app/main/default/objects/Competitor__c/fields/Neg_Reference_Account_1__c.field-meta.xml
<CustomField>
    <fullName>Neg_Reference_Account_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Accounts Only</inlineHelpText>
    <label>Neg Reference Account #1</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Competitors6</relationshipName>
    <type>Lookup</type>
</CustomField>