force-app/main/default/objects/Competitor__c/fields/Negative_Reference_2__c.field-meta.xml
<CustomField>
    <fullName>Negative_Reference_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contacts Only</inlineHelpText>
    <label>Negative Reference #2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Competitors1</relationshipName>
    <type>Lookup</type>
</CustomField>