force-app/main/default/objects/Competitor__c/fields/Negative_Reference_3__c.field-meta.xml
<CustomField>
    <fullName>Negative_Reference_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contacts Only</inlineHelpText>
    <label>Negative Reference #3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Competitors2</relationshipName>
    <type>Lookup</type>
</CustomField>