force-app/main/default/objects/Competitor__c/fields/NegRef_1__c.field-meta.xml
<CustomField>
    <fullName>NegRef_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contacts Only</inlineHelpText>
    <label>Negative Reference #1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>