force-app/main/default/objects/Competitor__c/fields/of_Customer_Service_Reps__c.field-meta.xml
<CustomField>
    <fullName>of_Customer_Service_Reps__c</fullName>
    <label># of Customer Service Reps</label>
    <length>25</length>
    <type>Text</type>
</CustomField>