force-app/main/default/objects/Competitor__c/fields/of_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_Employees__c</fullName>
    <label># of Employees</label>
    <length>25</length>
    <type>Text</type>
</CustomField>