force-app/main/default/objects/Competitor__c/fields/of_Programers__c.field-meta.xml
<CustomField>
    <fullName>of_Programers__c</fullName>
    <label># of Programers</label>
    <length>25</length>
    <type>Text</type>
</CustomField>