force-app/main/default/objects/Competitor__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Find the Parent Account in the Accounts Object (If
			applicable)</inlineHelpText>
    <label>Parent Account (if applicable)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>