force-app/main/default/objects/Competitor__c/fields/Partner_2__c.field-meta.xml
<CustomField>
    <fullName>Partner_2__c</fullName>
    <inlineHelpText>Strategic Partners are anyone that works with this
			competitor to assist them in selling, supporting, deploying
			or complimenting the competitive offering. Do Not Include
			Resellers here.</inlineHelpText>
    <label>Partner #2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>