force-app/main/default/objects/Competitor__c/fields/Planning_Product__c.field-meta.xml
<CustomField>
    <fullName>Planning_Product__c</fullName>
    <inlineHelpText>Competes with TP Only</inlineHelpText>
    <label>Planning Product</label>
    <length>25</length>
    <type>Text</type>
</CustomField>