force-app/main/default/objects/Competitor__c/fields/Planning_Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Planning_Product_Cost__c</fullName>
    <label>Planning Product Cost</label>
    <length>50</length>
    <type>Text</type>
</CustomField>