force-app/main/default/objects/Competitor__c/fields/Planning_Product_Strenghts__c.field-meta.xml
<CustomField>
    <fullName>Planning_Product_Strenghts__c</fullName>
    <inlineHelpText>Strengths over TP</inlineHelpText>
    <label>Planning Product (Strenghts)</label>
    <type>TextArea</type>
</CustomField>