force-app/main/default/objects/Competitor__c/fields/Planning_Product_Weakness__c.field-meta.xml
<CustomField>
    <fullName>Planning_Product_Weakness__c</fullName>
    <inlineHelpText>Weaknesses to TP</inlineHelpText>
    <label>Planning Product (Weakness)</label>
    <type>TextArea</type>
</CustomField>