force-app/main/default/objects/Competitor__c/fields/Primary_Map_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Map_Vendor__c</fullName>
    <label>Primary Map Vendor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>