force-app/main/default/objects/Competitor__c/fields/Routing_Product_1__c.field-meta.xml
<CustomField>
    <fullName>Routing_Product_1__c</fullName>
    <inlineHelpText>This is the product that would compete with ROADNET only</inlineHelpText>
    <label>Routing Product 1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>