force-app/main/default/objects/Competitor__c/fields/Routing_Product_1_Cost__c.field-meta.xml
<CustomField>
    <fullName>Routing_Product_1_Cost__c</fullName>
    <label>Routing Product #1 Cost</label>
    <length>50</length>
    <type>Text</type>
</CustomField>