force-app/main/default/objects/Competitor__c/fields/Routing_Product_1_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Routing_Product_1_Strengths__c</fullName>
    <inlineHelpText>These are strengths over ROADNET only</inlineHelpText>
    <label>Routing Product 1 (Strengths)</label>
    <type>TextArea</type>
</CustomField>