force-app/main/default/objects/Competitor__c/fields/Routing_Product_1_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Routing_Product_1_Weaknesses__c</fullName>
    <inlineHelpText>These are weakness or gaps to ROADNET only</inlineHelpText>
    <label>Routing Product 1 (Weaknesses)</label>
    <type>TextArea</type>
</CustomField>