force-app/main/default/objects/Competitor__c/fields/Routing_Product_2__c.field-meta.xml
<CustomField>
    <fullName>Routing_Product_2__c</fullName>
    <inlineHelpText>This is the product that may also compete with RNA (Plan) and or ROADNET</inlineHelpText>
    <label>Routing Product 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>