force-app/main/default/objects/Competitor__c/fields/Routing_Product_2_Strenghts__c.field-meta.xml
<CustomField>
    <fullName>Routing_Product_2_Strenghts__c</fullName>
    <inlineHelpText>These are strengths over RNA (Plan) and or ROADNET - be specific</inlineHelpText>
    <label>Routing Product 2 (Strenghts)</label>
    <type>TextArea</type>
</CustomField>