force-app/main/default/objects/Competitor__c/fields/Routing_Product_2_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Routing_Product_2_Weaknesses__c</fullName>
    <inlineHelpText>These are weaknesses or gaps to RNA (Plan) or ROADNET - be specific</inlineHelpText>
    <label>Routing Product 2 (Weaknesses)</label>
    <type>TextArea</type>
</CustomField>