force-app/main/default/objects/Competitor__c/fields/SaaS_Version__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(Software as a Service) Does this product run remotely?</inlineHelpText>
    <label>SaaS Version?</label>
    <type>Checkbox</type>
</CustomField>