force-app/main/default/objects/Competitor__c/fields/Sales_Engineer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer_Notes__c</fullName>
    <label>Sales Engineer Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>