force-app/main/default/objects/Competitor__c/fields/SE_Notes_GPS_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>SE_Notes_GPS_Dispatch__c</fullName>
    <label>SE Notes (GPS/Dispatch)</label>
    <type>TextArea</type>
</CustomField>