force-app/main/default/objects/Competitor__c/fields/SE_Notes_Planning_Products__c.field-meta.xml
<CustomField>
    <fullName>SE_Notes_Planning_Products__c</fullName>
    <label>SE Notes (Planning Products)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>