force-app/main/default/objects/Competitor__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <inlineHelpText>Street Adress Only</inlineHelpText>
    <label>Street (HQ)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>