force-app/main/default/objects/Competitor__c/fields/Update_notes__c.field-meta.xml
<CustomField>
    <fullName>Update_notes__c</fullName>
    <description>Used by interns and database manager to detail updates</description>
    <label>Update notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>