force-app/main/default/objects/Competitor__c/fields/UPSLT_Knock_Out_Report__c.field-meta.xml
<CustomField>
    <fullName>UPSLT_Knock_Out_Report__c</fullName>
    <label>RTI Knock-Out Report</label>
    <type>Url</type>
</CustomField>