force-app/main/default/objects/Competitor__c/fields/Watch_List__c.field-meta.xml
<CustomField>
    <fullName>Watch_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Watch List</label>
    <type>Checkbox</type>
</CustomField>