force-app/main/default/objects/Competitor__c/fields/X1st_Day_of_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>X1st_Day_of_Fiscal_Year__c</fullName>
    <label>1st Day of Fiscal Year</label>
    <type>Date</type>
</CustomField>