force-app/main/default/objects/Competitor__c/recordTypes/CNR_Competitors.recordType-meta.xml
<RecordType>
    <fullName>CNR_Competitors</fullName>
    <active>false</active>
    <description>Used for CNR Competitors</description>
    <label>CNR Competitors</label>
</RecordType>