force-app/main/default/objects/Competitor__c/recordTypes/Competitor.recordType-meta.xml
<RecordType>
    <fullName>Competitor</fullName>
    <active>true</active>
    <description>New competitor custom object to track all consolidated company comptetitors</description>
    <label>Competitor</label>
</RecordType>