force-app/main/default/objects/Competitor__c/recordTypes/FRA_Competitors.recordType-meta.xml
<RecordType>
    <fullName>FRA_Competitors</fullName>
    <active>false</active>
    <description>Used for FRA Competitors</description>
    <label>FRA Competitors</label>
</RecordType>