force-app/main/default/objects/Competitor__c/recordTypes/Old_CNR_Competitors.recordType-meta.xml
<RecordType>
    <fullName>Old_CNR_Competitors</fullName>
    <active>true</active>
    <description>Used for CNR Competitors</description>
    <label>Old CNR Competitors</label>
</RecordType>