force-app/main/default/objects/Competitor__c/recordTypes/Old_FRA_Competitors.recordType-meta.xml
<RecordType>
    <fullName>Old_FRA_Competitors</fullName>
    <active>true</active>
    <description>Used for FRA Competitors</description>
    <label>Old FRA Competitors</label>
</RecordType>