force-app/main/default/objects/Competitor__c/recordTypes/Old_QES_Competitors.recordType-meta.xml
<RecordType>
    <fullName>Old_QES_Competitors</fullName>
    <active>true</active>
    <description>Used for QES Competitors</description>
    <label>Old Omnitracs Competitors</label>
</RecordType>