force-app/main/default/objects/Competitor__c/recordTypes/Old_Sylectus_Competitors.recordType-meta.xml
<RecordType>
    <fullName>Old_Sylectus_Competitors</fullName>
    <active>false</active>
    <description>Used for Sylectus Competitors</description>
    <label>Old Sylectus Competitors</label>
</RecordType>