force-app/main/default/objects/Competitor__c/recordTypes/QES_Competitors.recordType-meta.xml
<RecordType>
    <fullName>QES_Competitors</fullName>
    <active>true</active>
    <description>Used for QES Competitors</description>
    <label>Omnitracs Competitors</label>
</RecordType>