force-app/main/default/objects/Competitor__c/recordTypes/Sylectus_Competitors.recordType-meta.xml
<RecordType>
    <fullName>Sylectus_Competitors</fullName>
    <active>false</active>
    <description>Used for Sylectus Competitors</description>
    <label>Sylectus Competitors</label>
</RecordType>