force-app/main/default/objects/Competitor__c/listViews/All_Competitors2.listView-meta.xml
<ListView>
    <fullName>All_Competitors2</fullName>
    <columns>NAME</columns>
    <columns>Competitor_Product_Solution__c</columns>
    <columns>Headquarters_Country__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Competitors</label>
    <language>en_US</language>
</ListView>