force-app/main/default/objects/Competitor__c/listViews/Search.listView-meta.xml
<ListView>
    <fullName>Search</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Search</label>
    <language>en_US</language>
</ListView>